Fix file processing in FileTransformationProvider (#3457)
Signed-off-by: Jan N. Klug <github@klug.nrw>