@@ -18,22 +18,23 @@ import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.not;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.when;
+import static org.openhab.core.service.WatchService.Kind.CREATE;
+import static org.openhab.core.service.WatchService.Kind.DELETE;
+import static org.openhab.core.service.WatchService.Kind.MODIFY;
 import static org.openhab.core.transform.Transformation.FUNCTION;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Map;
-import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.io.TempDir;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -54,36 +55,30 @@ import org.openhab.core.service.WatchService;
 public class FileTransformationProviderTest {
     private static final String FOO_TYPE = "foo";
     private static final String INITIAL_CONTENT = "initial";
-    private static final String INITIAL_FILENAME = INITIAL_CONTENT + "." + FOO_TYPE;
-    private static final Transformation INITIAL_CONFIGURATION = new Transformation(INITIAL_FILENAME, INITIAL_FILENAME,
-            FOO_TYPE, Map.of(FUNCTION, INITIAL_CONTENT));
+    private static final Path INITIAL_FILENAME = Path.of(INITIAL_CONTENT + "." + FOO_TYPE);
+    private static final Transformation INITIAL_CONFIGURATION = new Transformation(INITIAL_FILENAME.toString(),
+            INITIAL_FILENAME.toString(), FOO_TYPE, Map.of(FUNCTION, INITIAL_CONTENT));
     private static final String ADDED_CONTENT = "added";
-    private static final String ADDED_FILENAME = ADDED_CONTENT + "." + FOO_TYPE;
+    private static final Path ADDED_FILENAME = Path.of(ADDED_CONTENT + "." + FOO_TYPE);
 
-    private @Mock @NonNullByDefault({}) WatchService watchService;
+    private @Mock @NonNullByDefault({}) WatchService watchServiceMock;
     private @Mock @NonNullByDefault({}) ProviderChangeListener<@NonNull Transformation> listenerMock;
 
     private @NonNullByDefault({}) FileTransformationProvider provider;
-    private @NonNullByDefault({}) Path targetPath;
+    private @NonNullByDefault({}) @TempDir Path configPath;
+    private @NonNullByDefault({}) Path transformationPath;
 
     @BeforeEach
     public void setup() throws IOException {
-        // create directory
-        targetPath = Files.createTempDirectory("fileTest");
+        when(watchServiceMock.getWatchPath()).thenReturn(configPath);
+        transformationPath = configPath.resolve(TransformationService.TRANSFORM_FOLDER_NAME);
 
-        // set initial content
-        Files.write(targetPath.resolve(INITIAL_FILENAME), INITIAL_CONTENT.getBytes(StandardCharsets.UTF_8));
+        // create transformation directory and set initial content
+        Files.createDirectories(transformationPath);
+        Files.writeString(transformationPath.resolve(INITIAL_FILENAME), INITIAL_CONTENT);
 
-        provider = new FileTransformationProvider(watchService, targetPath);
+        provider = new FileTransformationProvider(watchServiceMock);
         provider.addProviderChangeListener(listenerMock);
-    }
-
-    @AfterEach
-    public void tearDown() throws IOException {
-        try (Stream<Path> walk = Files.walk(targetPath)) {
-            walk.map(Path::toFile).forEach(File::delete);
-        }
-        Files.deleteIfExists(targetPath);
     }
 
     @Test
@@ -94,13 +89,10 @@ public class FileTransformationProviderTest {
 
     @Test
     public void testAddingConfigurationIsPropagated() throws IOException {
-        Path path = targetPath.resolve(ADDED_FILENAME);
-
-        Files.write(path, ADDED_CONTENT.getBytes(StandardCharsets.UTF_8));
-        Transformation addedConfiguration = new Transformation(ADDED_FILENAME, ADDED_FILENAME, FOO_TYPE,
-                Map.of(FUNCTION, ADDED_CONTENT));
-
-        provider.processWatchEvent(WatchService.Kind.CREATE, path);
+        Files.writeString(transformationPath.resolve(ADDED_FILENAME), ADDED_CONTENT);
+        Transformation addedConfiguration = new Transformation(ADDED_FILENAME.toString(), ADDED_FILENAME.toString(),
+                FOO_TYPE, Map.of(FUNCTION, ADDED_CONTENT));
+        provider.processWatchEvent(CREATE, ADDED_FILENAME);
 
         // assert registry is notified and internal cache updated
         Mockito.verify(listenerMock).added(provider, addedConfiguration);
@@ -109,12 +101,10 @@ public class FileTransformationProviderTest {
 
     @Test
     public void testUpdatingConfigurationIsPropagated() throws IOException {
-        Path path = targetPath.resolve(INITIAL_FILENAME);
-        Files.write(path, "updated".getBytes(StandardCharsets.UTF_8));
-        Transformation updatedConfiguration = new Transformation(INITIAL_FILENAME, INITIAL_FILENAME, FOO_TYPE,
-                Map.of(FUNCTION, "updated"));
-
-        provider.processWatchEvent(WatchService.Kind.MODIFY, path);
+        Files.writeString(transformationPath.resolve(INITIAL_FILENAME), "updated");
+        Transformation updatedConfiguration = new Transformation(INITIAL_FILENAME.toString(),
+                INITIAL_FILENAME.toString(), FOO_TYPE, Map.of(FUNCTION, "updated"));
+        provider.processWatchEvent(MODIFY, INITIAL_FILENAME);
 
         Mockito.verify(listenerMock).updated(provider, INITIAL_CONFIGURATION, updatedConfiguration);
         assertThat(provider.getAll(), contains(updatedConfiguration));
@@ -123,9 +113,7 @@ public class FileTransformationProviderTest {
 
     @Test
     public void testDeletingConfigurationIsPropagated() {
-        Path path = targetPath.resolve(INITIAL_FILENAME);
-
-        provider.processWatchEvent(WatchService.Kind.DELETE, path);
+        provider.processWatchEvent(DELETE, INITIAL_FILENAME);
 
         Mockito.verify(listenerMock).removed(provider, INITIAL_CONFIGURATION);
         assertThat(provider.getAll(), not(contains(INITIAL_CONFIGURATION)));
@@ -134,22 +122,23 @@ public class FileTransformationProviderTest {
     @Test
     public void testLanguageIsProperlyParsed() throws IOException {
         String fileName = "test_de." + FOO_TYPE;
-        Path path = targetPath.resolve(fileName);
+        Path path = transformationPath.resolve(fileName);
 
-        Files.write(path, INITIAL_CONTENT.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, INITIAL_CONTENT);
 
         Transformation expected = new Transformation(fileName, fileName, FOO_TYPE, Map.of(FUNCTION, INITIAL_CONTENT));
 
-        provider.processWatchEvent(WatchService.Kind.CREATE, path);
+        provider.processWatchEvent(CREATE, Path.of(fileName));
         assertThat(provider.getAll(), hasItem(expected));
     }
 
     @Test
     public void testMissingExtensionIsIgnored() throws IOException {
-        Path path = targetPath.resolve("extensionMissing");
-        Files.write(path, INITIAL_CONTENT.getBytes(StandardCharsets.UTF_8));
-        provider.processWatchEvent(WatchService.Kind.CREATE, path);
-        provider.processWatchEvent(WatchService.Kind.MODIFY, path);
+        Path extensionMissing = Path.of("extensionMissing");
+        Path path = transformationPath.resolve(extensionMissing);
+        Files.writeString(path, INITIAL_CONTENT);
+        provider.processWatchEvent(CREATE, extensionMissing);
+        provider.processWatchEvent(MODIFY, extensionMissing);
 
         Mockito.verify(listenerMock, never()).added(any(), any());
         Mockito.verify(listenerMock, never()).updated(any(), any(), any());
@@ -157,10 +146,11 @@ public class FileTransformationProviderTest {
 
     @Test
     public void testIgnoredExtensionIsIgnored() throws IOException {
-        Path path = targetPath.resolve("extensionIgnore.txt");
-        Files.write(path, INITIAL_CONTENT.getBytes(StandardCharsets.UTF_8));
-        provider.processWatchEvent(WatchService.Kind.CREATE, path);
-        provider.processWatchEvent(WatchService.Kind.MODIFY, path);
+        Path extensionIgnored = Path.of("extensionIgnore.txt");
+        Path path = transformationPath.resolve(extensionIgnored);
+        Files.writeString(path, INITIAL_CONTENT);
+        provider.processWatchEvent(CREATE, extensionIgnored);
+        provider.processWatchEvent(MODIFY, extensionIgnored);
 
         Mockito.verify(listenerMock, never()).added(any(), any());
         Mockito.verify(listenerMock, never()).updated(any(), any(), any());
